--- a/hbase_storage/pom.xml
+++ b/hbase_storage/pom.xml
@@ -14,7 +14,7 @@
   -->
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <artifactId>hbase_storage-${envClassifier}</artifactId>
+    <artifactId>hbase_storage-cdh5.8.3</artifactId>
     <description>HBase-1.0-base Storage engine for SpliceMachine</description>
     <parent>
         <artifactId>spliceengine-parent</artifactId>
@@ -30,7 +30,7 @@
         <dependency>
             <groupId>org.apache.hbase</groupId>
             <artifactId>hbase-client</artifactId>
-            <version>${hbase.version}</version>
+            <version>1.2.0-cdh5.8.3</version>
             <exclusions>
                 <exclusion>
                     <groupId>org.slf4j</groupId>
@@ -53,7 +53,7 @@
         <dependency>
             <groupId>org.apache.hadoop</groupId>
             <artifactId>hadoop-common</artifactId>
-            <version>${hadoop.version}</version>
+            <version>2.6.0-cdh5.8.3</version>
 	    <exclusions>
 		    <exclusion>
 			    <groupId>asm</groupId>
@@ -64,7 +64,7 @@
         <dependency>
             <groupId>org.apache.hbase</groupId>
             <artifactId>hbase-server</artifactId>
-            <version>${hbase.version}</version>
+            <version>1.2.0-cdh5.8.3</version>
             <exclusions>
                 <exclusion>
                     <groupId>org.slf4j</groupId>
@@ -152,7 +152,7 @@
         <dependency>
             <groupId>org.apache.hbase</groupId>
             <artifactId>hbase-testing-util</artifactId>
-            <version>${hbase.version}</version>
+            <version>1.2.0-cdh5.8.3</version>
             <!--intentionally compile scope,we use this dependency at app compile and runtime-->
             <scope>test</scope>
             <exclusions>
@@ -202,7 +202,7 @@
                         </goals>
                         <configuration>
                             <sources>
-                                <source>${envHbase}/src/main/java</source>
+                                <source>hbase1.2.0/src/main/java</source>
                             </sources>
                         </configuration>
                     </execution>
@@ -214,7 +214,7 @@
                         </goals>
                         <configuration>
                             <sources>
-                                <source>${envHbase}/src/test/java</source>
+                                <source>hbase1.2.0/src/test/java</source>
                             </sources>
                         </configuration>
                     </execution>
@@ -228,7 +228,7 @@
                         <configuration>
                             <resources>
                                 <resource>
-                                <directory>${envHbase}/src/main/resources</directory>
+                                <directory>hbase1.2.0/src/main/resources</directory>
                             </resource>
                             </resources>
                         </configuration>
