--- a/splice_spark/pom.xml
+++ b/splice_spark/pom.xml
@@ -20,13 +20,23 @@
         <version>2.5.0.1745-SNAPSHOT</version>
     </parent>
 
-    <artifactId>splicemachine-${envClassifier}-${spark.version.label}_${scala.binary.version}</artifactId>
+    <artifactId>splicemachine-cdh5.8.3-2.2.0_2.11</artifactId>
     <name>Splicemachine Spark Bindings</name>
     <properties>
+        <cdh.parcel.version>5.8.3</cdh.parcel.version>
+        <envClassifier>cdh5.8.3</envClassifier>
+        <envHbase>hbase1.2.0</envHbase>
+        <hadoop.version>2.6.0-cdh5.8.3</hadoop.version>
+        <hbase.version>1.2.0-cdh5.8.3</hbase.version>
+        <hive.version>1.1.0-cdh5.8.3</hive.version>
+        <zookeeper.version>3.4.5-cdh5.8.3</zookeeper.version>
+        <spark.version>2.2.0.cloudera1</spark.version>
+        <spark-assembly-id>spark-assembly-hadoop2.6.0-cdh5.8.3</spark-assembly-id>
+        <kafka.version>0.10.0-kafka-2.1.0</kafka.version>
         <!--Skip server startup-->
         <server.skip.start>skipServerStart</server.skip.start>
         <!--Ant task to run shell scripts-->
-        <skipTests>${maven.skip.tests}</skipTests>
+        <skipTests>true</skipTests>
         <shell.command>/bin/bash</shell.command>
         <start.script>${project.basedir}/../hbase_sql/src/test/bin/start-splice-its</start.script>
         <stop.script>${project.basedir}/../hbase_sql/src/test/bin/stop-splice-its</stop.script>
@@ -155,19 +165,19 @@
         </dependency>
         <dependency>
             <groupId>${project.groupId}</groupId>
-            <artifactId>hbase_storage-${envClassifier}</artifactId>
-            <version>${project.version}</version>
+            <artifactId>hbase_storage-cdh5.8.3</artifactId>
+            <version>2.5.0.1745-SNAPSHOT</version>
         </dependency>
 
         <dependency>
             <groupId>${project.groupId}</groupId>
-            <artifactId>hbase_sql-${envClassifier}</artifactId>
-            <version>${project.version}</version>
+            <artifactId>hbase_sql-cdh5.8.3</artifactId>
+            <version>2.5.0.1745-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>${project.groupId}</groupId>
             <artifactId>splice_machine</artifactId>
-            <version>${project.version}</version>
+            <version>2.5.0.1745-SNAPSHOT</version>
         </dependency>
 
         <dependency>
@@ -192,8 +202,8 @@
 
         <dependency>
             <groupId>${project.groupId}</groupId>
-            <artifactId>hbase_pipeline-${envClassifier}</artifactId>
-            <version>${project.version}</version>
+            <artifactId>hbase_pipeline-cdh5.8.3</artifactId>
+            <version>2.5.0.1745-SNAPSHOT</version>
             <exclusions>
                 <exclusion>
                     <groupId>org.jboss.netty</groupId>
@@ -255,7 +265,7 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <configuration>
-                    <argLine>-Djava.library.path=${project.build.directory}/../../assembly/${envClassifier}/native/${os.detected.classifier}:/usr/local/lib/ -Dhbase.rootdir=${project.build.directory}/../../hbase_sql/target/hbase</argLine>
+                    <argLine>-Djava.library.path=${project.build.directory}/../../assembly/cdh5.8.3/native/${os.detected.classifier}:/usr/local/lib/ -Dhbase.rootdir=${project.build.directory}/../../hbase_sql/target/hbase</argLine>
                 </configuration>
             </plugin>
 
@@ -310,14 +320,14 @@
                                         <exec executable="${shell.command}" dir="${basedir}/../hbase_sql" spawn="false">
                                             <arg value="${start.script}"/>
                                             <arg value="-c"/>
-                                            <arg value="-p ${envClassifier},${envHbase}${ee_out}"/>
+                                            <arg value="-p cdh5.8.3,${envHbase}${ee_out}"/>
                                         </exec>
                                     </then>
                                     <else>
                                         <!-- chaos monkey overridden: -DfailTasksRandomly=false -->
                                         <exec executable="${shell.command}" dir="${basedir}/../hbase_sql" spawn="false">
                                             <arg value="${start.script}"/>
-                                            <arg value="-p ${envClassifier},${envHbase}${ee_out}"/>
+                                            <arg value="-p cdh5.8.3,${envHbase}${ee_out}"/>
                                         </exec>
                                     </else>
                                 </if>
@@ -379,7 +389,7 @@
                     <dependency>
                         <groupId>com.splicemachine</groupId>
                         <artifactId>splice_machine</artifactId>
-                        <version>${project.version}</version>
+                        <version>2.5.0.1745-SNAPSHOT</version>
                         <classifier>tests</classifier>
                     </dependency>
 
